# geomodels

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build-manylinux-wheels.sh  meson.build  meson.options  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  lint.yml  main.yml  ubuntu.yml  wheels.yml
docs/: NEWS.rst  cli.rst  conf.py  index.rst  installation.rst  quickstart.rst  reference.rst  spelling_wordlist.txt
docs/api/: geomodels.cli.rst  geomodels.data.rst  geomodels.error.rst  geomodels.rst  geomodels.wmmf.rst
docs/man/: geomodels-cli.1
geomodels/: __init__.py  __main__.py  _ext.pyi  _ext.pyx  _typing.py  _utils.py  cli.py  common.pxd  common.pyx  data.py  error.py  geoid.pxd  geoid.pyx  gravity.pxd  gravity.pyx  magnetic.pxd  magnetic.pyx  meson.build  wmmf.py
geomodels/test/: __init__.py  test_common.py  test_data.py  test_geoid.py  test_gravity.py  test_magnetic.py  utils.py
geomodels/tests/: __init__.py  test_cli.py  test_common.py  test_data.py  test_geoid.py  test_gravity.py  test_magnetic.py  test_wmmf.py  utils.py
subprojects/: geographiclib-notools.patch  geographiclib.wrap
