[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"


[project]
name = "geomodels"
authors = [
    {name = "Antonio Valentino", email = "antonio.valentino@tiscali.it"},
]
description = "Python package for Earth data models management"
# readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.8"
keywords = [
    "geoid",
    "gravity",
    "magnetic",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
]
dynamic = ["version", "readme"]


[project.optional-dependencies]
cli = ["argcomplete"]
download = ["tqdm"]
test = ["pytest"]
all = ["geomodels[cli]", "geomodels[download]", "geomodels[test]"]


[project.scripts]
geomodels-cli = "geomodels.__main__:main"


[project.urls]
Homepage = "https://github.com/avalentino/geomodels"
# Documentation = "https://packagename.readthedocs.io"
Repository = "https://github.com/avalentino/geomodels.git"
Changelog = "https://github.com/avalentino/geomodels/blob/main/docs/NEWS.rst"
Issue = "https://github.com/avalentino/geomodels/issues"


[tool.setuptools]
packages = ["geomodels", "geomodels.tests", "geomodels.tests.data"]
# license-files = ["LICENSE"]


[tool.setuptools.dynamic]
version = {attr = "geomodels._version.__version__"}


[tool.setuptools.package-data]
"geomodels.tests.data" = ["*.txt"]


[tool.pytest.ini_options]
# --ignore-glob is available in PyTest >= 4.3.0
# addopts = --ignore-glob='GeographicLib*'


[tool.pydocstyle]
add-ignore = "D105"


[tool.black]
line-length = 79
# target-version = ['py311']


[tool.isort]
profile = "black"
length_sort = true
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79
