[metadata]
name = geomodels
version = attr: geomodels._version.__version__
description = Python package for Earth data models management
# long_description = file: README.rst
url = https://github.com/avalentino/geomodels
author = Antonio Valentino
author_email = antonio.valentino@tiscali.it
keywords = geoid, gravity, magnetic
license = MIT
licens_files = LICENSE 
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    dataclasses; python_version<"3.7"
python_requires = >= 3.6

[options.package_data]
geomodels.tests = data/*.txt

[options.extras_require]
download = tqdm
cli = argcomplete

[options.entry_points]
console_scripts =
    geomodels-cli = geomodels.__main__:main
